--- a/CSS-Piastro.html
+++ b/CSS-Piastro.html
@@ -114,25 +114,25 @@
 			<div class="more-articles container_12">
 				<h2 class="grid_12"><a href="">More Articles</a></h2>
 				<div class="grid_3">
-					<img src="more1.JPG" alt="The road ahead" width="220" height="125" />
+					<img src="more1.jpg" alt="The road ahead" width="220" height="125" />
 					<p><a href="">On the Road: From the fixed gear fanatic's point of view</a></p>
 					<p><a href="">Brand History: Pashley Cycles - hand-built in England</a></p>
 					<p><a href="">Frame Wars: Innovations in cycle manufacture and repair</a></p>
 				</div>
 				<div class="grid_3">
-					<img src="more2.JPG" alt="Sketchbook" width="220" height="125" />
+					<img src="more2.jpg" alt="Sketchbook" width="220" height="125" />
 					<p><a href="">Touring Diary: A sketchbook in your basket</a></p>
 					<p><a href="">Top Ten Newcomers for 2012: A peek at what's to come</a></p>
 					<p><a href="">InnerTube: The best cycling videos on the web</a></p>
 				</div>
 				<div class="grid_3">
-					<img src="more3.JPG" alt="Repair shop sign" width="220" height="125" />
+					<img src="more3.jpg" alt="Repair shop sign" width="220" height="125" />
 					<p><a href="">Product Review: All baskets were not created equal</a></p>
 					<p><a href="">Going Public: Out &amp; about with the founder of Public</a></p>
 					<p><a href="">Cycle Lane Defence: Know your rights</a></p>
 				</div>
 				<div class="grid_3">
-					<img src="more4.JPG" alt="Schwinn Spitfire" width="220" height="125" />
+					<img src="more4.jpg" alt="Schwinn Spitfire" width="220" height="125" />
 					<p><a href="">Bicycle Hall of Fame: The 1958 Schwinn Spitfire</a></p>
 					<p><a href="">Reader Survey: Share your thoughts with us!</a></p>
 					<p><a href="">Chain Gang: The evolution of the humble bike chain</a></p>
@@ -145,4 +145,5 @@
 			</div>
 		</div>
 	</body>
+
 </html>
